<resources>
    <string name="logo">Logo</string>
    <string name="app_name">SMART CHARGER</string>
    <string name="main_header_title">WELCOME!</string>
    <string name="body_header_title">Charger connection</string>
    <string name="instructions_before_connection">Before you start using charger you will have to connect with your RFID card.</string>
    <string name="connect_button_text">Connect</string>
    <string name="instructions_rfid_connection">Please put your RFID card on the phone screen to connect with the charger</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="status_waiting_card">Status: Waiting for card&#8230;</string>


    <string name="login_page_title">LOGIN</string>
    <string name="wrong_password">You have entered the wrong password.</string>
    <string name="disabled_account">This account is disabled.</string>
    <string name="unregistered_email">This email is not registered.</string>
    <string name="invalid_email">Email is not valid.</string>
    <string name="short_password">Password must have at least 6 characters.</string>
    <string name="unexpected_login_error">Something went wrong…</string>
    <string name="login_succeeded">Correct</string>
    <string name="login_successful">Successful login.</string>
    <string name="login_unsuccessful">Unsuccessful login.</string>
    <string name="cant_reach_server">Can\'t connect to server. Please try later.</string>
    <string name="google_login_failed">Google login failed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_page_title">REGISTER</string>
    <string name="input_field_first_name">First name</string>
    <string name="input_field_last_name">Last name</string>
    <string name="input_field_email">Email</string>
    <string name="input_field_password">Password</string>
    <string name="input_field_confirm_password">Confirm password</string>
    <string name="lowercase_register">Register</string>
    <string name="validation_confirm_password">Your passwords do not match</string>
    <string name="validation_password">Password should have at least 6 digits</string>
    <string name="validation_email">Use this format: name@domain.abc</string>
    <string name="validation_lastname">Last name must contain at least 1 letter</string>
    <string name="validation_firstname">Name must contain at least 1 letter</string>

    <string name="rfid_list_title">RFID cards</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="card_value">Card value</string>
    <string name="create_card_button">Add card</string>
    <string name="card_name">Card name</string>
    <string name="add_new_card_header">Add new card</string>
    <string name="delete_card_question">Are you sure you want to delete card \"Druga kartica\"</string>
    <string name="delete_button">Delete</string>
    <string name="active">Active</string>
    <string name="scrollable_list_of_rfid_cards">scrollable_list_of_rfid_cards</string>
    <string name="retry">Retry</string>
    <string name="add_new_rfid_card">addNewRFIDcard</string>
    <string name="header_background">header_background</string>
    <string name="hamburger_menu_icon">hamburger_menu_icon</string>
    <string name="delete_card_button">delete_card_button</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="header_name">%1$s %2$s</string>
    <string name="scan_card">Scan card</string>
    <string name="please_active_nfc">Please activate NFC</string>
    <string name="please_scan_your_card_first">Please scan your card first!</string>
    <string name="google_login">Google Login</string>
    <string name="status_invalid_card">Status: Invalid card</string>
    <string name="status_service_unreachable">Status: Service unreachable</string>
    <string name="your_card_is_not_registered">Your card is not registered. Please register the card and try again.</string>
    <string name="this_card_is_not_supported">This card is not supported in our application!</string>
    <string name="status_scan_timeout">Status: Scan timeout</string>
    <string name="rfid_card_not_detected_within_the_allotted_time">RFID card not detected within the allotted time. Please restart the scanning.</string>


    <string name="charger_1">Charger 1</string>
    <string name="disconnect">Disconnect</string>
    <string name="charger_box_image">Charger Box image</string>
    <string name="status_not_charging">Status: Not charging</string>
    <string name="status_charging">Status: Charging</string>
    <string name="charging_time">Charging time:</string>
    <string name="consumed">Consumed (kW):</string>
    <string name="button_for_changing_state">Button for changing state</string>
    <string name="start_charger_instruction">Click play button to start charging</string>
    <string name="pause_charger_instruction">Click pause button to stop charging</string>
    <string name="charging_history_page_title">Charging history</string>
    <string name="charger_name_title">Charger name</string>
    <string name="time_started_title">Started</string>
    <string name="consumed_title">Consumed\n(kWh)</string>
    <string name="time_ended_title">Ended</string>
    <string name="or">or</string>
    <string name="charger_connection">CHARGER CONNECTION</string>
    <string name="charger">Charger</string>
    <string name="profile">Profile</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="rfid_cards">RFID CARDS</string>
    <string name="charging_history">CHARGING HISTORY</string>
    <string name="logout">LOGOUT</string>
    <string name="successful_logout">Successful logout</string>
    <string name="select_charger">Select charger:</string>
    <string name="free_state">Free</string>
    <string name="occupied_state">Occupied</string>
    <string name="in_use">In use</string>
</resources>