<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <View
        android:id="@+id/vHeaderBackground"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:background="#004054"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMainTitleCharger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charger_1"
        android:textColor="@color/white"
        android:textSize="39sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vHeaderBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivChargerBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/charger_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vHeaderBackground"
        android:contentDescription="@string/charger_box_image" />

        <Button
            android:id="@+id/btnDisconnect"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_buttonbackground_cancel"
            android:text="@string/disconnect"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivChargerBox" />

    <TextView
        android:id="@+id/tvChargingStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/bitter"
        android:text="@string/status_not_charging"
        android:textColor="#60F2E9"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivChargerBox"
        tools:text="Status: [Text]" />

    <TextView
        android:id="@+id/tvChargingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/bitter"
        android:text="@string/charging_time"
        android:textColor="#60F2E9"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChargingStatus" />

    <TextView
        android:id="@+id/tvConsumed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bitter"
        android:text="@string/consumed"
        android:textColor="#60F2E9"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chChargingTime" />

        <TextView
            android:id="@+id/tvConsumedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/bitter"
            android:text="0.0"
            android:textColor="#60F2E9"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConsumed"
            tools:text="[number] " />

    <Chronometer
        android:id="@+id/chChargingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/bitter"
        android:textColor="#60F2E9"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChargingTime" />

    <ImageButton
        android:id="@+id/ibState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivChargerBox"
        app:srcCompat="@drawable/ic_start"
        android:contentDescription="@string/button_for_changing_state" />

        <TextView
            android:id="@+id/tvChangeStateInstructions"
            android:layout_width="196dp"
            android:layout_height="45dp"
            android:layout_marginTop="520dp"
            android:fontFamily="@font/bitter"
            android:text="@string/start_charger_instruction"
            android:textAlignment="center"
            android:textColor="#6C6C6C"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivChargerBox" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>