<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <View
        android:id="@+id/vHeaderBackground"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:background="#004054"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMainHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/bitter_bold"
        android:text="@string/charging_history_page_title"
        android:textColor="@color/white"
        android:textSize="39sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/vHeaderBackground"
        app:layout_constraintStart_toStartOf="@+id/vHeaderBackground"
        app:layout_constraintTop_toTopOf="@+id/vHeaderBackground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B5B5B5"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vHeaderBackground">

        <TextView
            android:id="@+id/chargerNameTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/abeezee"
            android:gravity="center"
            android:text="@string/charger_name_title" />

        <TextView
            android:id="@+id/timeStartedTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/abeezee"
            android:gravity="center"
            android:text="@string/time_started_title" />

        <TextView
            android:id="@+id/timeEndedTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/abeezee"
            android:gravity="center"
            android:text="@string/time_ended_title" />

        <TextView
            android:id="@+id/consumedTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/abeezee"
            android:gravity="center"
            android:text="@string/consumed_title" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/svChargingHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vHeaderBackground">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvChargingHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <TextView
        android:id="@+id/tvFailedConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee"
        android:gravity="center"
        android:text="@string/cant_reach_server"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRetryConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_dialog_button"
        android:text="@string/retry"
        android:visibility="invisible"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFailedConnection" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:visibility="invisible"
        android:indeterminateTint="@color/rfidCardColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>